--- a/java-impl/pom.xml
+++ b/java-impl/pom.xml
@@ -37,7 +37,7 @@
 	</repositories>
 
 	<groupId>consulo.internal</groupId>
-	<artifactId>windows-file-dialog</artifactId>
+	<artifactId>windows.file.dialog-java.impl</artifactId>
 	<version>2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 </project>
